--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,16 @@
 # Site settings
-title:          Tale
-description:    "Minimal Jekyll theme for storytellers"
-baseurl:        "/tale"
-url:            "https://chesterhow.github.io"
+title:          KxxBBi Blog
+description:    "Kxxbbi blog"
+url:            "https://kxxbbi.github.io"
 
 # Google Analytics
 google_analytics: UA—XXXXXXXX-X
 
 # Author
 author:
-  name:         Chester How
-  url:          https://chester.how
-  email:        chesterhow@gmail.com
+  name:         kxxbbi
+  url:          https://kxxbbi.github.io
+  email:        kxxbbi@gmail.com
 
 # Build settings
 markdown:       kramdown
